[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Button/Movement/right.png" type="Texture" id=1]
[ext_resource path="res://assets/Button/Movement/down.png" type="Texture" id=2]
[ext_resource path="res://assets/Button/Movement/left.png" type="Texture" id=3]
[ext_resource path="res://assets/Button/Movement/up.png" type="Texture" id=4]
[ext_resource path="res://src/Character/Movement_UI.gd" type="Script" id=5]
[ext_resource path="res://assets/Button/Movement/left2.png" type="Texture" id=6]
[ext_resource path="res://assets/Button/Movement/right2.png" type="Texture" id=7]
[ext_resource path="res://assets/Button/Movement/down2.png" type="Texture" id=8]
[ext_resource path="res://assets/Button/Movement/up2.png" type="Texture" id=9]

[node name="Movement_UI" type="Node2D"]
modulate = Color( 1, 1, 1, 0.686275 )
script = ExtResource( 5 )

[node name="up" type="TouchScreenButton" parent="."]
position = Vector2( -46.764, -130.006 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 4 )
pressed = ExtResource( 9 )

[node name="down" type="TouchScreenButton" parent="."]
position = Vector2( -45.9733, 36.5039 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 2 )
pressed = ExtResource( 8 )

[node name="left" type="TouchScreenButton" parent="."]
position = Vector2( -147.805, -41.5611 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 3 )
pressed = ExtResource( 6 )

[node name="right" type="TouchScreenButton" parent="."]
position = Vector2( 56.6711, -45.2383 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 1 )
pressed = ExtResource( 7 )

[connection signal="pressed" from="up" to="." method="_on_up_pressed"]
[connection signal="released" from="up" to="." method="_on_up_released"]
[connection signal="pressed" from="down" to="." method="_on_down_pressed"]
[connection signal="released" from="down" to="." method="_on_down_released"]
[connection signal="pressed" from="left" to="." method="_on_left_pressed"]
[connection signal="released" from="left" to="." method="_on_left_released"]
[connection signal="pressed" from="right" to="." method="_on_right_pressed"]
[connection signal="released" from="right" to="." method="_on_right_released"]
